--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,15 +3,51 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    outline: none;
+
 }
 
-html 
-{
-    box-sizing: border-box;
-}
-
-body
+body 
 {
     display: flex;
+    background-color: white;
+    color: black;
+    transition: background-color 0.5s ease, color 0.5s ease;
 }
+
+body.dark-theme 
+{
+    background-color: #273746;
+    color: white;
+}
+
+body.dark-theme .darktheme 
+{
+    background-color: #34495e;
+}
+
+body.dark-theme .darktheme i {
+    color: #ecf0f1; 
+}
+
+body.dark-theme .darktheme:hover 
+{
+    background-color: #7d3c98; 
+}
+
+body.dark-theme .darktheme:hover i 
+{
+    color: white; 
+}
+
+footer {
+    text-align: center; 
+    margin-top: 100px;  
+    padding: 10px;     
+}
+
+
+
+
+
+
+
