--- a/public/css/stylebodysection.css
+++ b/public/css/stylebodysection.css
@@ -38,6 +38,22 @@
     background-color: #ddd !important; 
 }
 
+/***** horaEstacionalDropdown *****/ 
+#horaEstacionalDropdown
+{
+    background-color: #7d3c98;
+    border: none;
+    box-shadow: none;
+    
+}
+
+#horaEstacionalDropdown:hover
+{
+    background-color: #fff;
+    color: #7d3c98;
+}
+ /***** End horaEstacionalDropdown *****/
+
 /* Estilos para los calendarios */
 .container-calendar {
     display: grid;
@@ -72,33 +88,14 @@
     padding: 3px;
     text-align: center;
     font-size: 12px;
+    color: #000; /* Color para los números de los días */
 }
 
 /* Estilos para los días de la semana */
 .calendar th {
     background-color: #f7f7f7;
-    color: #555;
+    color: #555; /* Color para los días de la semana */
 }
-
-/* Estilos para el mes de enero */
-.calendar h3 {
-    background-color: #000;
-    color: #fff;
-    padding: 5px;
-    margin: 0;
-    font-size: 14px;
-}
-
-/* Estilos para los números de los días */
-.calendar td {
-    color: #000;
-}
-
-/* Estilos para los días de la semana en gris */
-.calendar th {
-    color: #555;
-}
-
 .highlight-today 
 {
     background-color: #5dade2;
