--- a/public/css/stylebodynav.css
+++ b/public/css/stylebodynav.css
@@ -1,4 +1,4 @@
-/*Menu*/
+/*StyleBodyNav*/
 .sidebar
 {
     position: sticky;
@@ -77,8 +77,8 @@
 
 .menu li.active 
 {
-    background: #7d3c98;
-    color: #fff;
+    border: 2px solid #7d3c98;
+    background: transparent;
 }
 
 .menu a 
@@ -97,16 +97,43 @@
 .menu li:hover a, 
 .menu li:hover i
 {
-    color: #fff; 
+    color: #fff;
+    animation: fade-up 0.5s forwards; 
+}
+
+@keyframes fade-up 
+{
+    0% {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes flashing {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 .menu li.active a, 
 .menu li.active i
 {
-    color: #fff; 
+    color: #000;
+    animation: flashing 5s infinite; 
 }
 
-.menu-item span {
+.menu-item span 
+{
     overflow: hidden;
 }
 
@@ -114,7 +141,8 @@
 {
     font-size: 20px;
     flex-shrink: 0;
-    color: black; 
+    color: black;
+    transition: transform 0.10s ease; 
 }
 
 .menu-item {
